tests/expectations/compiler/structs/member_variable_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [EPAR0370005]: expected : -- found '='
    --> compiler-test:10:17
     |
  10 |         let err = a.y;
     |                 ^"""]
